tests/paczka1/fuzzy1/49704816.err
Error in line 15: S838 A281 2ã9
Error in line 16: S838 S784 4,5
Error in line 12: YLCQmooWJJ S784 96,6
Error in line 28: YLCQmooWJJ A972 -2,6
Error in line 33: AtTra A972 9,7
Error in line 35: AtTra A9	2 	6,1
Error in line 24: YLCQmooWJJ A972 45,0
Error in line 21: X0VG9mMNv S784 3,6
Error in line 34: AtTra A281 73,9
